changed BUFFERPOOL definition to try to fix mass disconnects during netsplits   on larger (over 8k local clients) servers revved patchlevel to b118

--- a/include/config.h.dist
+++ b/include/config.h.dist
@@ -16,7 +16,7 @@
  *   along with this program; if not, write to the Free Software
  *   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  *
- * $Id: config.h.dist,v 1.63 1999/11/16 05:32:26 lusky Exp $
+ * $Id: config.h.dist,v 1.64 1999/12/23 06:40:41 lusky Exp $
  */
 #ifndef INCLUDED_config_h
 #define INCLUDED_config_h
@@ -451,9 +451,9 @@
 #define MAXSENDQLENGTH 5050000    /* Recommended value: 5050000 for efnet */
 
 /*  BUFFERPOOL - the maximum size of the total of all sendq's.
- *  Recommended value is four times MAXSENDQLENGTH.
+ *  Recommended value is 2 dbufs for each fd.
  */
-#define BUFFERPOOL     (4 * MAXSENDQLENGTH)
+#define BUFFERPOOL (HARD_FDLIMIT_ * 2048 * 2)
 
 /* IRC_UID IRC_GID - user and group id ircd should switch to if run as root
  * If you start the server as root but wish to have it run as another user,
