split m_list.c away from channel.c its getting too silly  ALL paced   commands should give RPL_LOAD2HI if its a local client request.   Its not going to flood off the user... Hence, I have added RPL_LOAD2HI   to m_list.c splitting it from channel.c (db) optimized the patch I did for USE_IP_I_LINE first.. not thoroughly tested. (db) resync_channels was just a waste of time. If the clock goes that far off,  restart the puppy. (db)

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -1,7 +1,7 @@
 #
 # Makefile.in for ircd/src
 #
-# $Id: Makefile.in,v 1.55 1999/08/01 07:18:23 tomh Exp $
+# $Id: Makefile.in,v 1.56 1999/12/29 03:28:47 lusky Exp $
 #
 CC = @CC@
 RM = @RM@
@@ -48,6 +48,7 @@ SRCS = \
 	m_kill.c \
 	m_kline.c \
 	m_links.c \
+	m_list.c \
 	m_locops.c \
 	m_ltrace.c \
 	m_lusers.c \
@@ -132,6 +133,7 @@ SRCS = \
 #	m_info.o \
 #	m_kline.o \
 #	m_links.o \
+#	m_list.o \
 #	m_locops.o \
 #	m_ltrace.o \
 #	m_lusers.o \
