added CVS Id tags to numerous files brought Hybrid-team and version.c.SH deleted ChangeLog.old and include/defs.h

--- a/doc/example.conf
+++ b/doc/example.conf
@@ -1,8 +1,8 @@
-#
+#   $Id: example.conf,v 1.23 2000/10/06 03:00:53 lusky Exp $
 #   IRC - Internet Relay Chat, doc/example.conf
 #   Copyright (C) 1992, Bill Wisner
 #
-#   Modified by Rodder, Jon Lusky <lusky@vol.com>,
+#   Modified by Rodder, Jon Lusky <lusky@blown.net>,
 #   at one time, but he didn't credit his changes.
 #   Updated Dec 19, 1997 Diane Bruce aka db/Dianora <db@db.net>
 #   please also read example.conf.trillian, it covers
