--- a/doc/simple.conf
+++ b/doc/simple.conf
@@ -1,5 +1,6 @@
 # IRC minimal example configuration file
-#
+# $Id: simple.conf,v 1.4 2000/10/06 03:00:54 lusky Exp $
+# 
 # This is a basic ircd.conf that will get you up and running with
 # little or no modifications.  See the example.conf file for more
 # detailed explanations.
