--- a/autoconf/configure.in
+++ b/autoconf/configure.in
@@ -1,3 +1,4 @@
+dnl $Id: configure.in,v 1.8 2000/10/06 03:00:51 lusky Exp $
 dnl Process this file with autoconf to produce a configure script.
 AC_INIT(include/class.h)
 
