--- a/doc/Makefile
+++ b/doc/Makefile
@@ -15,6 +15,8 @@
 #*   You should have received a copy of the GNU General Public License
 #*   along with this program; if not, write to the Free Software
 #*   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
+#*
+#*   $Id: Makefile,v 1.2 2000/10/06 03:00:53 lusky Exp $
 #*/
 
 all:
