fix for duplicate 401's for kick #validchan invalnick ServerStats->is_ref is incremented twice on an X-line   which is set to 1 (jdc) STATS P notifications were not sent to opers (jdc) includefile rehash notifications sent to FLAGS_DEBUG stats l/L target to FLAGS_SPY (if STATS_NOTICE) (jdc) uname info only displayed to opers If X-line port field is 2, reject client but do not send   a notification to opers STATS y/Y now oper-only Four new defines, I_LINES_OPER_ONLY, K_LINES_OPER_ONLY,   P_LINES_OPER_ONLY, and SPOOF_NOTICE (jdc/jrl) add some missing defines to m_info.h

--- a/include/config.h.dist
+++ b/include/config.h.dist
@@ -16,7 +16,7 @@
  *   along with this program; if not, write to the Free Software
  *   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  *
- * $Id: config.h.dist,v 1.75 2000/09/14 05:21:57 lusky Exp $
+ * $Id: config.h.dist,v 1.76 2000/10/21 06:36:08 lusky Exp $
  */
 #ifndef INCLUDED_config_h
 #define INCLUDED_config_h
@@ -283,7 +283,7 @@
  */
 #define BOTCHECK
 
-/* X_LINES_OPER_ONLY - Allow only local opers to see these stats
+/* x_LINES_OPER_ONLY - Allow only local opers to see these stats
  *
  *  Any one with an F line can almost always get on the server, as
  *  some file descriptors are reserved for people with this F line
@@ -292,6 +292,14 @@
 #define B_LINES_OPER_ONLY
 #define E_LINES_OPER_ONLY
 #define F_LINES_OPER_ONLY
+#undef  I_LINES_OPER_ONLY
+#undef  K_LINES_OPER_ONLY
+#undef  P_LINES_OPER_ONLY
+
+/* SPOOF_NOTICE - See a notice when a user connects with a
+ * spoofed I: line
+ */
+#define SPOOF_NOTICE
 
 /* STATS_NOTICE - See a notice when a user does a /stats
  *
