hide baninfo for hide_ops (db) misc documentation cleanups (wc) changed SendWallops and SendServNotice macros to check IsAnOper

--- a/doc/example.conf
+++ b/doc/example.conf
@@ -1,4 +1,4 @@
-#   $Id: example.conf,v 1.23 2000/10/06 03:00:53 lusky Exp $
+#   $Id: example.conf,v 1.24 2000/11/27 04:11:42 lusky Exp $
 #   IRC - Internet Relay Chat, doc/example.conf
 #   Copyright (C) 1992, Bill Wisner
 #
@@ -176,6 +176,8 @@ I:NOMATCH::*@*ts*::3
 ##
 ## A variant of amm's spoofing code was added
 ## = Spoof this users IP, normally only used for opers
+##
+## < This user is exempt from idle restrictions if IDLE_CHECK is defined
 ##
 
 ## Examples
