--- a/doc/example.conf
+++ b/doc/example.conf
@@ -1,4 +1,4 @@
-#   $Id: example.conf,v 1.24 2000/11/27 04:11:42 lusky Exp $
+#   $Id: example.conf,v 1.25 2000/12/01 06:28:43 lusky Exp $
 #   IRC - Internet Relay Chat, doc/example.conf
 #   Copyright (C) 1992, Bill Wisner
 #
@@ -173,6 +173,7 @@ I:NOMATCH::*@*ts*::3
 ## & User can run bots (old B line)
 ## > This user is exempt from I line/server side connection limits
 ##   (old F line)
+## _ This user is exempt from G lines
 ##
 ## A variant of amm's spoofing code was added
 ## = Spoof this users IP, normally only used for opers
