- revved patchlevel to 6.0.2 - CLIENT_SERVER was missing from config.h

--- a/include/config.h.dist
+++ b/include/config.h.dist
@@ -16,7 +16,7 @@
  *   along with this program; if not, write to the Free Software
  *   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  *
- * $Id: config.h.dist,v 1.81 2000/11/27 04:11:48 lusky Exp $
+ * $Id: config.h.dist,v 1.82 2001/02/19 04:47:01 lusky Exp $
  */
 #ifndef INCLUDED_config_h
 #define INCLUDED_config_h
@@ -233,6 +233,11 @@
  * tries to /oper and uses an incorrect password.
  */
 #define FAILED_OPER_NOTICE
+
+/* CLIENT_SERVER - Don't be so fascist about idle clients ;)
+ * changes behaviour of HTM code to make clients lag less.
+ */  
+#define CLIENT_SERVER
 
 /* SHOW_FAILED_OPER_ID - if FAILED_OPER_NOTICE is defined, also notify when
  * a client fails to oper because of a identity mismatch (wrong host or nick)
