- well. folded in ircd-hybrid-6.0.2-enclinks.tar.gz patches from   arnvid@karstad.org It compiles at least.

--- a/autoconf/configure.in
+++ b/autoconf/configure.in
@@ -1,4 +1,4 @@
-dnl $Id: configure.in,v 1.8 2000/10/06 03:00:51 lusky Exp $
+dnl $Id: configure.in,v 1.9 2001/06/04 05:07:09 db Exp $
 dnl Process this file with autoconf to produce a configure script.
 AC_INIT(include/class.h)
 
@@ -25,6 +25,7 @@ AC_CHECK_LIB(nsl, gethostbyname)
 AC_CHECK_FUNC(res_mkquery,, AC_CHECK_LIB(resolv, res_mkquery))
 AC_CHECK_LIB(socket, socket)
 AC_CHECK_FUNC(crypt,, AC_CHECK_LIB(descrypt, crypt,,AC_CHECK_LIB(crypt, crypt,,)))
+AC_CHECK_LIB(crypto, RSA_free)
 
 dnl Checks for header files.
 AC_HEADER_STDC
@@ -38,6 +39,27 @@ AC_PROG_GCC_TRADITIONAL
 
 dnl check for poll() call
 AC_CHECK_FUNC(poll, AC_DEFINE(USE_POLL),)
+
+dnl Check OpenSSL version
+AC_MSG_CHECKING(for required OpenSSL version)
+AC_TRY_RUN(
+[
+#include <openssl/opensslv.h>
+int main() {
+  if (OPENSSL_VERSION_NUMBER < 0x00906000)
+    exit(1);
+  exit(0);		
+}
+], AC_MSG_RESULT(ok), AC_MSG_ERROR(** OpenSSL version below 0.9.6 - ircd-hybrid will not compile **), 
+AC_MSG_ERROR(Unable to test))
+
+dnl Check for ciphers supported by OpenSSL crypto lib
+AC_CHECK_FUNCS(BF_cfb64_encrypt,,)
+AC_CHECK_FUNCS(idea_cfb64_encrypt,,)
+AC_CHECK_FUNCS(CAST_cfb64_encrypt,,)
+AC_CHECK_FUNCS(RC5_32_cfb64_encrypt,,)
+AC_CHECK_FUNCS(des_cfb64_encrypt,,)
+AC_CHECK_FUNCS(des_ede3_cfb64_encrypt,,)
 
 dnl taken from ircd's Config script
 AC_MSG_CHECKING(for non-blocking socket implementation)
