--- a/include/config.h.dist
+++ b/include/config.h.dist
@@ -16,7 +16,7 @@
  *   along with this program; if not, write to the Free Software
  *   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  *
- * $Id: config.h.dist,v 1.83 2001/06/03 21:42:56 db Exp $
+ * $Id: config.h.dist,v 1.84 2001/06/04 05:07:12 db Exp $
  */
 #ifndef INCLUDED_config_h
 #define INCLUDED_config_h
@@ -390,6 +390,30 @@
  * small net it might be an advantage to undefine it.
  */
 #define SHOW_INVISIBLE_LUSERS
+
+#define CRYPT_LINKS             /* allow encrypted server-server links */
+#define CRYPT_LINKS_CNPREFIX '@'
+#define CRYPT_LINKS_PRIVATEKEYFILE "private.key"
+
+/* Cipher selection. Define the ciphers you want to support, at least one. 
+ * The numeric value is the ciphers priority, the cipher selection will
+ * be the lowest numbered cipher that is supported by both ends of a 
+ * link. As a link may use differing ciphers each direction, these defines
+ * can be changed at will. If there's no ciphers in common with the other
+ * end, the link won't happen.
+ * Use tools/encspeed to look at throughput of each cipher.
+ * -einride.
+*/
+#define CRYPT_BLOWFISH256 1 /* Blowfish 256-bit */
+#define CRYPT_BLOWFISH128 2 /* Blowfish 128-bit */
+#define CRYPT_CAST        3 /* CAST 128-bit */
+#define CRYPT_IDEA        4 /* IDEA 128-bit */
+#define CRYPT_RC5_16      5 /* 16 round RC5 128-bit */
+#define CRYPT_RC5_12      6 /* 12 round RC5 128-bit */
+#define CRYPT_3DES        7 /* Triple DES 168-bit */
+#define CRYPT_RC5_8       8 /* 8 round RC5 128-bit */
+#define CRYPT_DES         9 /* Standard DES 56-bit */ 
+
 
 #define ZIP_LINKS               /* compress server-to-server links */
 
