--- a/include/setup.h.in
+++ b/include/setup.h.in
@@ -1,7 +1,4 @@
-/* include/setup.h.in.  Generated automatically from configure.in by autoheader.
- *
- * $Id: setup.h.in,v 1.6 2000/10/06 03:00:57 lusky Exp $ 
- */
+/* include/setup.h.in.  Generated automatically from configure.in by autoheader.  */
 
 /* Define if you need to in order for stat and other things to work.  */
 #undef _POSIX_SOURCE
@@ -38,8 +35,32 @@
 /* Define if you are running SOLARIS2.  */
 #undef OS_SOLARIS2
 
+/* Define if you have the BF_cfb64_encrypt function.  */
+#undef HAVE_BF_CFB64_ENCRYPT
+
+/* Define if you have the CAST_cfb64_encrypt function.  */
+#undef HAVE_CAST_CFB64_ENCRYPT
+
+/* Define if you have the RC5_32_cfb64_encrypt function.  */
+#undef HAVE_RC5_32_CFB64_ENCRYPT
+
+/* Define if you have the RSA_free function.  */
+#undef HAVE_RSA_FREE
+
+/* Define if you have the des_cfb64_encrypt function.  */
+#undef HAVE_DES_CFB64_ENCRYPT
+
+/* Define if you have the des_ede3_cfb64_encrypt function.  */
+#undef HAVE_DES_EDE3_CFB64_ENCRYPT
+
+/* Define if you have the idea_cfb64_encrypt function.  */
+#undef HAVE_IDEA_CFB64_ENCRYPT
+
 /* Define if you have the <errno.h> header file.  */
 #undef HAVE_ERRNO_H
+
+/* Define if you have the <getopt.h> header file.  */
+#undef HAVE_GETOPT_H
 
 /* Define if you have the <stddef.h> header file.  */
 #undef HAVE_STDDEF_H
@@ -56,8 +77,8 @@
 /* Define if you have the <unistd.h> header file.  */
 #undef HAVE_UNISTD_H
 
-/* Define if you have the <getopt.h> header file.  */
-#undef HAVE_GETOPT_H
+/* Define if you have the crypto library (-lcrypto).  */
+#undef HAVE_LIBCRYPTO
 
 /* Define if you have the descrypt library (-ldescrypt).  */
 #undef HAVE_LIBDESCRYPT
