--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -1,8 +1,7 @@
 #
 # Makefile.in for ircd/src
 #
-# $Id: Makefile.in,v 1.58 2000/06/22 05:40:55 lusky Exp $
-#
+# $Id: Makefile.in,v 1.59 2001/06/04 05:07:15 db Exp $
 CC = @CC@
 RM = @RM@
 MKDEP = ${CC} -MM
@@ -12,9 +11,8 @@ IRCDLIBS = @LIBS@ ../zlib/libz.a
 INCLUDES = -I../include -I../zlib
 CPPFLAGS = ${INCLUDES} @CPPFLAGS@
  
-#
 # For developers
-# CFLAGS= -g -O2 -Wall 
+# CFLAGS= -g -O2 -Wall
 #
 
 SRCS = \
@@ -38,6 +36,8 @@ SRCS = \
 	m_capab.c \
 	m_close.c \
 	m_connect.c \
+	m_cryptauth.c \
+	m_cryptserv.c \
 	m_die.c \
 	m_error.c \
 	m_gline.c \
@@ -88,6 +88,7 @@ SRCS = \
 	s_auth.c \
 	s_bsd.c \
 	s_conf.c \
+        s_crypt.c \
 	s_debug.c \
 	s_log.c \
 	s_misc.c \
