* Removed all of this "cipher priority" crap.  I'm sorry folks, but   this is silly.  The priority is now defined by the order of the   cipher definition in src/s_crypt.c.  I assume the best order is   the following, and therefore this is how they're used now:   Blowfish(256), Blowfish(128), CAST, IDEA, RC5(16), RC5(12), RC5(8),   3DES, DES.
  The reason for this is because the previous method was not taking
  into account who had what ciphers based upon what autoconf said.
  I.e. #error's would be stated for ciphers which you didn't have,
  assuming they were #define'd in config.h.  Now just rely upon the
  autoconf values ENTIRELY.  Yay.

* Changed Makefile.in to provide full warning flags for "developers" if
  need be.  We have a __TON__ of warnings, folks.  We should try to
  clean these up before the next release.

--- a/Makefile.in
+++ b/Makefile.in
@@ -16,7 +16,7 @@
 #*   along with this program; if not, write to the Free Software
 #*   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
 #*
-#*   $Id: Makefile.in,v 1.18 2000/10/06 03:00:46 lusky Exp $
+#*   $Id: Makefile.in,v 1.19 2001/06/04 16:20:08 jdc Exp $
 #*/
 
 RM=@RM@
@@ -29,7 +29,7 @@ CFLAGS = -g -O2 -DNDEBUG
 
 #
 # For developers
-# CFLAGS= -g -O2 -Wall
+# CFLAGS= -g -ggdb -Wall -Wunused -Wshadow -Wmissing-declarations
 #
 # You may need to define the FD_SETSIZE in order to overrule
 # the system one.
